Cleaning files and folder

--- a/comics.html
+++ b/comics.html
@@ -171,7 +171,7 @@
       </div>
     </div>
   </main>
-  
+
   <!-- Footer -->
   <footer class="marvel-footer">
     <p>Data provided by Marvel. © 2014 Marvel</p>
@@ -182,17 +182,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
   <!-- Configuración y utilidades -->
-  <script src="js/config.js"></script>
-  <script src="js/utils.js"></script>
+  <script src="js/services/Config.js"></script>
+  <script src="js/utils/utils.js"></script>
 
   <!-- Servicios -->
   <script src="js/services/MarvelAPI.js"></script>
   <script src="js/services/DataService.js"></script>
 
   <!-- Clases base -->
-  <script src="js/classes/Comic.js"></script>
-  <script src="js/classes/Hero.js"></script>
-  <script src="js/classes/Collections.js"></script>
+  <script src="js/models/Comic.js"></script>
+  <script src="js/models/Hero.js"></script>
+  <script src="js/models/Collections.js"></script>
 
   <!-- Componentes -->
   <script src="js/components/Spinner.js"></script>
@@ -207,7 +207,7 @@
   <script src="js/components/ComicModal.js"></script>
 
   <!-- Script principal -->
-  <script src="js/comics.js"></script>
+  <script src="js/controllers/comics.js"></script>
 </body>
 
 </html>
