--- a/heroes.html
+++ b/heroes.html
@@ -93,17 +93,17 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
   <!-- Configuración y utilidades -->
-  <script src="js/config.js"></script>
-  <script src="js/utils.js"></script>
+  <script src="js/services/Config.js"></script>
+  <script src="js/utils/utils.js"></script>
 
   <!-- Servicios -->
   <script src="js/services/MarvelAPI.js"></script>
   <script src="js/services/DataService.js"></script>
 
   <!-- Clases base -->
-  <script src="js/classes/Comic.js"></script>
-  <script src="js/classes/Hero.js"></script>
-  <script src="js/classes/Collections.js"></script>
+  <script src="js/models/Comic.js"></script>
+  <script src="js/models/Hero.js"></script>
+  <script src="js/models/Collections.js"></script>
 
   <!-- Componentes -->
   <script src="js/components/Spinner.js"></script>
@@ -115,7 +115,7 @@
   <script src="js/components/HeroesSearch.js"></script>
 
   <!-- Script principal -->
-  <script src="js/heroes.js"></script>
+  <script src="js/controllers/heroes.js"></script>
 </body>
 
 </html>
