--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="register-container">
       <div class="register-header">
-        <a href="home.html" class="back-button">
+        <a href="index.html" class="back-button">
           <i class="fas fa-arrow-left"></i>
         </a>
         <h1>¡Únete al Universo Marvel!</h1>
