--- a/collections.html
+++ b/collections.html
@@ -7,7 +7,7 @@
   <title>Collections - Marvel Comics API - UOC</title>
   <link rel="stylesheet" href="styles/collections.css">
   <link rel="stylesheet" href="styles/navbar.css">
-  <link rel="stylesheet" href="styles/collection-modal.css">
+  <link rel="stylesheet" href="styles/collectionModal.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="icon" type="image/png" href="assets/images/marvel-logo.png">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
@@ -101,7 +101,7 @@
       </div>
     </div>
   </div>
-  
+
   <!-- Footer -->
   <footer class="marvel-footer">
     <p>Data provided by Marvel. © 2014 Marvel</p>
@@ -112,25 +112,24 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
   <!-- Configuración y utilidades -->
-  <script src="js/config.js"></script>
-  <script src="js/utils.js"></script>
+  <script src="js/services/Config.js"></script>
+  <script src="js/utils/utils.js"></script>
 
   <!-- Servicios -->
   <script src="js/services/MarvelAPI.js"></script>
   <script src="js/services/DataService.js"></script>
 
   <!-- Clases base -->
-  <script src="js/classes/Comic.js"></script>
-  <script src="js/classes/Hero.js"></script>
-  <script src="js/classes/Collections.js"></script>
+  <script src="js/models/Comic.js"></script>
+  <script src="js/models/Hero.js"></script>
+  <script src="js/models/Collections.js"></script>
 
   <!-- Componentes -->
   <script src="js/components/Navbar.js"></script>
-  <script src="js/components/Card.js"></script>
   <script src="js/components/CollectionModal.js"></script>
 
   <!-- Script principal -->
-  <script src="js/collections.js"></script>
+  <script src="js/controllers/collections.js"></script>
 </body>
 
 </html>
