--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="login-container">
       <div class="login-header">
-        <a href="home.html" class="back-button">
+        <a href="index.html" class="back-button">
           <i class="fas fa-arrow-left"></i>
         </a>
         <h1>Bienvenido de nuevo</h1>
@@ -80,7 +80,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-  <script src="js/login.js"></script>
+  <script src="js/controllers/login.js"></script>
 </body>
 
 </html>
