config and json optimizados

--- a/heroes.html
+++ b/heroes.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="styles/spinner.css">
   <link rel="stylesheet" href="styles/heroModal.css">
   <link rel="stylesheet" href="styles/accordion.css">
-  <link rel="icon" type="image/png" href="assets/images/marvel-logo.png">
+  <link rel="icon" type="image/svg+xml" href="images/marvel.svg">
 </head>
 
 <body>
