--- a/register.html
+++ b/register.html
@@ -169,7 +169,8 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-  <script src="js/register.js"></script>
+  <script src="js/services/Config.js"></script>
+  <script src="js/controllers/register.js"></script>
 </body>
 
 </html>
