--- a/comics.html
+++ b/comics.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles/comics.css">
   <link rel="stylesheet" href="styles/spinner.css">
   <link rel="stylesheet" href="styles/comicModal.css">
-  <link rel="icon" type="image/png" href="assets/images/marvel-logo.png">
+  <link rel="icon" type="image/svg+xml" href="images/marvel.svg">
 </head>
 
 <body>
