--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles/home.css">
   <link rel="stylesheet" href="styles/navbar.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="icon" type="image/png" href="assets/images/marvel-logo.png">
+  <link rel="icon" type="image/svg+xml" href="images/marvel.svg">
 </head>
 
 <body>
