--- a/login.html
+++ b/login.html
@@ -79,8 +79,11 @@
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <!-- Scripts -->
+  <script src="js/services/Config.js"></script>
   <script src="js/controllers/login.js"></script>
+  <script src="https://kit.fontawesome.com/your-code.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 </body>
 
 </html>
