--- a/collections.html
+++ b/collections.html
@@ -124,9 +124,12 @@
   <script src="js/models/Hero.js"></script>
   <script src="js/models/Collections.js"></script>
 
-  <!-- Componentes -->
-  <script src="js/components/Navbar.js"></script>
-  <script src="js/components/CollectionModal.js"></script>
+  <!-- Components -->
+  <script src="js/components/shared/Navbar.js"></script>
+  <script src="js/components/shared/Spinner.js"></script>
+  <script src="js/components/shared/Accordion.js"></script>
+  <script src="js/components/collections/CollectionModal.js"></script>
+  <script src="js/components/comics/ComicsGrid.js"></script>
 
   <!-- Script principal -->
   <script src="js/controllers/collections.js"></script>
