--- a/comics.html
+++ b/comics.html
@@ -194,17 +194,18 @@
   <script src="js/models/Hero.js"></script>
   <script src="js/models/Collections.js"></script>
 
-  <!-- Componentes -->
-  <script src="js/components/Spinner.js"></script>
-  <script src="js/components/Navbar.js"></script>
-  <script src="js/components/FilterBadges.js"></script>
-  <script src="js/components/ComicsGrid.js"></script>
-  <script src="js/components/ComicsSearch.js"></script>
-  <script src="js/components/ComicsActionsBar.js"></script>
-  <script src="js/components/ComicsCollectionModal.js"></script>
-  <script src="js/components/HeroesCarousel.js"></script>
-  <script src="js/components/Accordion.js"></script>
-  <script src="js/components/ComicModal.js"></script>
+  <!-- Components -->
+  <script src="js/components/shared/Navbar.js"></script>
+  <script src="js/components/shared/Spinner.js"></script>
+  <script src="js/components/shared/FilterBadges.js"></script>
+  <script src="js/components/shared/Accordion.js"></script>
+  <script src="js/components/heroes/HeroesCarousel.js"></script>
+  <script src="js/components/comics/ComicsGrid.js"></script>
+  <script src="js/components/comics/ComicsSearch.js"></script>
+  <script src="js/components/comics/ComicModal.js"></script>
+  <script src="js/components/comics/ComicDetailsModal.js"></script>
+  <script src="js/components/comics/ComicsActionsBar.js"></script>
+  <script src="js/components/collections/ComicsCollectionModal.js"></script>
 
   <!-- Script principal -->
   <script src="js/controllers/comics.js"></script>
