--- a/heroes.html
+++ b/heroes.html
@@ -105,14 +105,15 @@
   <script src="js/models/Hero.js"></script>
   <script src="js/models/Collections.js"></script>
 
-  <!-- Componentes -->
-  <script src="js/components/Spinner.js"></script>
-  <script src="js/components/Navbar.js"></script>
-  <script src="js/components/FilterBadges.js"></script>
-  <script src="js/components/Accordion.js"></script>
-  <script src="js/components/HeroModal.js"></script>
-  <script src="js/components/HeroesGrid.js"></script>
-  <script src="js/components/HeroesSearch.js"></script>
+  <!-- Components -->
+  <script src="js/components/shared/Navbar.js"></script>
+  <script src="js/components/shared/Spinner.js"></script>
+  <script src="js/components/shared/FilterBadges.js"></script>
+  <script src="js/components/shared/Accordion.js"></script>
+  <script src="js/components/heroes/HeroesGrid.js"></script>
+  <script src="js/components/heroes/HeroesSearch.js"></script>
+  <script src="js/components/heroes/HeroModal.js"></script>
+  <script src="js/components/heroes/HeroesCarousel.js"></script>
 
   <!-- Script principal -->
   <script src="js/controllers/heroes.js"></script>
