--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
   <script src="js/services/Config.js"></script>
   <script src="js/utils/utils.js"></script>
   <script src="js/models/Collections.js"></script>
-  <script src="js/components/Navbar.js"></script>
+  <script src="js/components/shared/Navbar.js"></script>
+  <script src="js/components/shared/Spinner.js"></script>
+  <script src="js/components/heroes/HeroesCarousel.js"></script>
   <script src="js/controllers/home.js"></script>
 
 </body>
