Entrega de video

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
   <section class="features">
     <h2>¿Qué puedes hacer?</h2>
     <div class="features-grid">
-      <a href="/comics.html" class="feature-card">
+      <a href="comics.html" class="feature-card">
         <i class="fas fa-book-open"></i>
         <h3>Explorar Cómics</h3>
         <p>Accede a una extensa biblioteca de cómics Marvel</p>
       </a>
-      <a href="/heroes.html" class="feature-card">
+      <a href="heroes.html" class="feature-card">
         <i class="fas fa-mask"></i>
         <h3>Conoce Héroes</h3>
         <p>Descubre todos los personajes del universo Marvel</p>
       </a>
-      <a href="/collections.html" class="feature-card">
+      <a href="collections.html" class="feature-card">
         <i class="fas fa-heart"></i>
         <h3>Crea tus Colecciones</h3>
         <p>Guarda tus cómics en nuestras colecciones pensadas para ti</p>
